FK to QCState table Audit support for assay QC states enforce copy to study restrictions for unapproved QC